2006-02-21 Kimmo
 PATCH: [ 1435384 ] Add context menu for diff pane
  Src: Merge.rc MergeDiffDetailView.cpp MergeDiffDetailView.h resource.h
  Src/Languages/*: Merge*.rc

2006-02-21 Perry
 PATCH: [ 1405603 ] New Test dialog for file filters
  (Forgot to do all the language resources)
 and misc RC file fixes (eg, many fixes in editor proppage)
 New: Src/Languages: WinMerge_Resource_Discrepencies.txt

2006-02-20 Perry
 PATCH: [ 1405603 ] New Test dialog for file filters
  Src: FileFilterMgr.cpp FileFilterMgr.h FileFiltersDlg.cpp
   FileFiltersDlg.h Merge.dsp Merge.rc resource.h
  Src new: TestFilterDlg.cpp TestFilterDlg.h
 PATCH: [ 1433312 ] Add cvs tags to source files
  Src: ByteComparator.cpp SharedFilterDlg.cpp StdAfx.cpp
   TestFilterDlg.cpp TestFilterDlg.h ViewableWhitespace.cpp
  Src/Common: SortHeaderCtrl.cpp SortHeaderCtrl.h UniFile.cpp
   UniFile.h textfile.cpp textfile.h unicoder.cpp unicoder.h
   varprop.cpp varprop.h version.cpp version.h

2006-02-20 Kimmo
 PATCH: [ 1178743 ] Disable lang menu if no additional langs installed
  Src: Merge.cpp Merge.h
  Src/Common: LanguageSelect.cpp LanguageSelect.h

2006-02-19 Perry
 PATCH: [ 1433931 ] Add comment before isBin checks in DirView
  Src: DirView.cpp
 PATCH: [ 1424153 ] Remove VTS_PUI1 from lwdisp.h
 BUG: [ 1395475 ] VTS_UI1 & VTSPUI1 macro redefinition warnings (VS.NET)
  Src\Common: lwdisp.h
 PATCH: [ 1433927 ] Fix external editor default and messages
 BUG: [ 1433774 ] default editor is blank
  Src: MainFrm.cpp Merge.cpp Merge.rc OptionsInit.cpp resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1433353 ] Fix menu resources
  Src: MainFrm.cpp Merge.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2006-02-19 Christian
 PATCH: [ 1429125 ] Return number of diffs instead of true/false
  Src: MergeDoc.cpp

2006-02-17 Perry
 BUG: [ 1395483 ] Signed/unsigned mismatch warning from LocationView.cpp
  Src: LocationView.cpp

2006-02-16 Perry