@@ -2,6 +2,8 @@
  PATCH: [ 1435384 ] Add context menu for diff pane
   Src: Merge.rc MergeDiffDetailView.cpp MergeDiffDetailView.h resource.h
   Src/Languages/*: Merge*.rc
+ PATCH: [ 1433125 ] Trap errors from filesystem during actions
+  Src: FileActionScript.cpp
 
 2006-02-21 Perry
  PATCH: [ 1405603 ] New Test dialog for file filters
